tests/snapshots/file@base@return@in_method.lox.snap
---
source: tests/common/mod.rs
description: "class Foo {\n  method() {\n    return \"ok\";\n    print \"bad\";\n  }\n}\n\nprint Foo().method(); // expect: ok\n"
input_file: crafting_interpreters_test_files/return/in_method.lox
---
OUT: 
ok

===
ERR:
