tests/snapshots/file@base@variable@local_from_method.lox.snap
---
source: tests/common/mod.rs
description: "var foo = \"variable\";\n\nclass Foo {\n  method() {\n    print foo;\n  }\n}\n\nFoo().method(); // expect: variable\n"
input_file: crafting_interpreters_test_files/variable/local_from_method.lox
---
OUT: 
variable

===
ERR:
