tests/snapshots/file@base@variable@redefine_global.lox.snap
---
source: tests/common/mod.rs
description: "var a = \"1\";\nvar a = \"2\";\nprint a; // expect: 2\n"
input_file: crafting_interpreters_test_files/variable/redefine_global.lox
---
OUT: 
2

===
ERR:
